Admin role - get user by id completed
