# swagger.yaml
@@ -424,6 +424,57 @@ paths:
           description: Bad request
         '500':
           description: 'Internal server error'        
+  /user/admin/user/{id}:
+    get:
+      tags:
+        - Admin
+      summary: get users by id
+      security:
+        - BearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          schema:
+            type: string        
+      responses:
+        '200':
+          description: success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success: 
+                    type: boolean
+                  token: 
+                    type: string
+                  user:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        photo:
+                          type: object
+                          properties:
+                            id:
+                              type: string
+                            secure_url:
+                              type: string  
+                        name:
+                          type: string 
+                        email:
+                          type: string 
+                        role:
+                          type: string 
+                        _id:
+                          type: string 
+                        createdAt:
+                          type: string 
+        '400':
+          description: Bad request
+        '500':
+          description: 'Internal server error'        
+
 
   /user/manager/allusers:
     get:
